loop_test_final_6.log
/home/freezeehost/baileys/package/lib/Utils/validate-connection.js:15
        browserVersion: { primary: 22, secondary: 04, tertiary: 4 },
                                                  ^^

SyntaxError: Octal literals are not allowed in strict mode.
    at wrapSafe (node:internal/modules/cjs/loader:1740:18)
    at Module._compile (node:internal/modules/cjs/loader:1783:20)
    at Object..js (node:internal/modules/cjs/loader:1940:10)
    at Module.load (node:internal/modules/cjs/loader:1530:32)
    at Module._load (node:internal/modules/cjs/loader:1332:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1553:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/home/freezeehost/baileys/package/lib/Utils/index.js:26:14)
    at Module._compile (node:internal/modules/cjs/loader:1809:14)

Node.js v25.6.0
